--- a/css/new_file.css
+++ b/css/new_file.css
@@ -8,7 +8,7 @@
 }
 .menban{
 	width:100%;
-	height:100%;
+	height:700px;
 	position:absolute;
 	top:0;
 	left:0;
@@ -40,11 +40,16 @@
  .xuanyan{
 	 height:600px;
  }
- .two{
+/* .One_Tw0{
+	 position: relative;
+	 z-index: 1;
+ } */
+ .position{
  	position: relative;
  	top: -120px;
  	left: 0;
  	right: 0;
+	
  }
 .three{
 	height: 254px;
@@ -64,4 +69,25 @@
 	position:absolute;
 	top:20%;
 	left:15%;
+}
+@media screen and (max-width:768px){
+	.area_left {
+		/* display: none; */
+		background-color: #1B1F25;
+		margin-bottom: 15px;
+	}
+}
+@media screen and (min-width:769px) and (max-width:1200px){
+	.area_left{
+	/* 	background-color: aqua; */
+	}
+}
+@media only screen and (min-width:1201px){
+	.area_left{
+	/* 	background-color: aqua; */
+		margin-bottom: 0px;
+	}
+}
+.nav2{
+	height:200px;
 }
